# rfi_toolbox

./: .gitignore  CLAUDE.md  README.md  abstract.md  pyproject.toml  setup.py
.github/workflows/: ci.yml
configs/data_generation/: synthetic_train_4k.yaml  synthetic_val_1k.yaml
docs/: API.md
rfi_toolbox/: __init__.py
rfi_toolbox/config/: __init__.py  loader.py  validators.py
rfi_toolbox/configs/: training_rfi_sam2.yaml
rfi_toolbox/core/: __init__.py  simulator.py
rfi_toolbox/data_generation/: __init__.py  synthetic_generator.py
rfi_toolbox/datasets/: __init__.py  batched_dataset.py  rfi_mask_dataset.py
rfi_toolbox/evaluation/: __init__.py  metrics.py  statistics.py
rfi_toolbox/io/: __init__.py  ms_injection.py  ms_loader.py
rfi_toolbox/models/: __init__.py  unet.py
rfi_toolbox/preprocessing/: __init__.py  preprocessor.py
rfi_toolbox/scripts/: __init__.py  evaluate_model.py  generate_dataset.py  normalize_rfi_data.py  train_model.py
rfi_toolbox/utils/: __init__.py  errors.py  evaluation.py
rfi_toolbox/visualization/: __init__.py  visualize.py
tests/: __init__.py  test_imports.py  test_ms_loader_fields.py  test_preprocessing.py
