[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rfi_toolbox"
version = "0.2.0"
description = "Universal foundation for ML-based RFI detection in radio astronomy"
readme = "README.md"
license = { text = "GNU GPLv3" }
authors = [
    { name = "Preshanth Jagannathan", email = "pjaganna@nrao.edu" }
]
dependencies = [
    "numpy",
    "matplotlib",
    "tqdm",
    "torch >= 1.9.0",
    "bokeh",
    "scikit-learn",
    "scipy",
    "albumentations",
    "pyyaml",
    "patchify",
    "python-casacore; sys_platform != 'darwin'",
    "casatools; sys_platform == 'darwin'",
]

[project.scripts]
generate_rfi_dataset = "rfi_toolbox.scripts.generate_dataset:main"
train_rfi_model = "rfi_toolbox.scripts.train_model:main"
evaluate_rfi_model = "rfi_toolbox.scripts.evaluate_model:main"
visualize_rfi_data = "rfi_toolbox.visualization.visualize:main"
normalize_rfi_data = "rfi_toolbox.scripts.normalize_rfi_data:main"
